# pydantic-tests

./: README.md  makefile  pyproject.toml
src/: models_v1a.py  models_v1b.py  models_v2.py
tests/: test_v1a.py  test_v1b.py  test_v2.py
